objects/Veda_Fraud_Minimal_Requirements__c.object
<CustomObject>
    <fields>
        <fullName>Aml_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aml Summary</label>
        <referenceTo>Veda_Fraud_Aml_Summary__c</referenceTo>
        <relationshipName>MinimalRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match_Criteria_Met__c</fullName>
        <label>Match Criteria Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Address_Met__c</fullName>
        <label>Name Address Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_And_Dob_Met__c</fullName>
        <label>Name And Dob Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Fraud Minimal Requirements</label>
    <nameField>
        <label>MinimalRequirements  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Minimal Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>